--- a/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
+++ b/src/Busybee/InstituteBundle/Resources/translations/BusybeeInstituteBundle.en_GB.yml
@@ -24,6 +24,8 @@ years:
     description: ''
     list: Academic Years
     empty: There are no Years Defined.
+    delete:
+        confirm: Are you sure you wish to delete this Year?
 year:
     add:
         title: Add Year
@@ -41,6 +43,7 @@ calendar:
     tab:
         year: Year
         terms: Terms
+        specialDays: Special Days
     year:
         title: Manage Year
         return: Return
@@ -55,6 +58,7 @@ calendar:
         lastDay: ''
         status: Only one calendar can be current. 
         terms: "Terms are sorted within the year by the First Day Date. Terms must exist within the year days, and must not overlap days in another term."
+        specialDays: ""
     placeholder:
         status: Select Status
     error:
@@ -68,6 +72,8 @@ calendar:
         action: Actions
     term:
         title: "Manage Terms in %year%"
+    specialDay:
+        title: Manage Special Days
 term:
     add: Add Term
     help:
@@ -76,3 +82,33 @@ term:
     label:
         name: Term Name
         shortName: Term Short Name
+    delete:
+        confirm: Are you sure you want to delete this Term?
+        title: Delete Term
+specialDay:
+    help:
+        day: (Must be Unique)
+        type: "Closed: No attendance required. Change Timing: Alter opening hours."
+        name: Usually the name of the public holiday.
+        description: "Can be empty."
+        open: Campus open time
+        start: ""
+        finish: ""
+        close: Campus close time
+    label:
+        day: Date of Special Day
+        type: Special Day option
+        name: Name
+        description: Description
+        open: Open Doors
+        start: Start Teaching
+        finish: Finish Teaching
+        close: Close Doors
+    type:
+        closure: Closed
+        alter: Change Timing
+    hour: Hour
+    minute: Minute
+    delete:
+        title: Delete Special Day.
+        confirm: Are you sure you want to delete this Special Day?
