Logo and Background Image Management

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -89,6 +89,7 @@ menu:
     calendar:
         manage: Calendar
         years: Years
+        view: Display Calendar
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
