--- a/src/Busybee/SystemBundle/Resources/translations/BusybeeSystemBundle.en_GB.yml
+++ b/src/Busybee/SystemBundle/Resources/translations/BusybeeSystemBundle.en_GB.yml
@@ -42,6 +42,7 @@ system:
             array: "Setting values for arrays are displayed as a display name: key combination."
             twig: "Templates in twig need to be tested on the page for which thay are used."
             displayName: 'The display name is available to change for your system, but it must be unique on your system.'
+            image: 'Upload an image.'
     upload:
         title: Upload Setting Package
         description: 'Upload a set of pre coded default settings.'
