--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -22,6 +22,8 @@ form:
     delete: Delete 
     save_and_add: Save&Add 
     upload: Upload
+    close: Close
+    reset: Refresh
     student:
         save:
             success: The student record was saved.
