Integrate Basic Student

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -76,6 +76,8 @@ menu:
             manage: Manage People
         staff: 
             manage: Manage Staff
+        student:
+            manage: Manage Students
     Site: System
     Misc: Miscellaneous
     templateDesign: Template Design 
