--- a/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -131,3 +131,8 @@ group:
 There was an error updating the settings: There was an error updating the settings.
 'The user %user% was enabled': 'The user %user% was enabled'
 'The user %user% was disabled': 'The user %user% was disabled'
+google:
+    invalid:
+        state: Google returned an invalid state.
+        user: 'Failed to retrieve a valid Google User: %message%'
+    notAvailable: 'The user %name% (%email%) was not registered on the local system.'
