--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -106,6 +106,7 @@ person:
         title: 'Care Giver: %name%'
     user:
         title: 'User:: %name%'
+        toggle: System User Status
 student:
     title:
         list: Student List
